Es para rederigirlo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="demos/appchidos.html"></a>
+    <a href="demos/appchidos.html">Ir a la pagina</a>
 </body>
 </html>
